Improvement of Generated-Host-UnitTest for BadRequest
